--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -183,6 +183,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt install libgtk-3-dev
           pip install -r requirements.txt
           pip install pyinstaller
 
