--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -181,19 +181,20 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Tatlin dependencies
-        run: |
-          sudo apt-get install \
-            libgtk-3-dev \
-            python3-wxgtk4.0 \
-            python3-numpy \
-            python3-opengl \
-            python3-pil \
-            python3-six
+      - name: Create virtual environment
+        run: python -m venv venv
+
+      - name: Activate virtual environment
+        run: source venv/bin/activate
+
+      - name: Install dependencies using pip
+        run: pip install -r requirements.txt
 
       - name: Install build dependencies
         run: |
-          sudo apt-get install libfuse2
+          sudo apt-get install \
+            libfuse2 \
+            libgtk-3-dev
           pip install pyinstaller
 
           # Download AppImage tools
