--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -182,24 +182,23 @@ jobs:
           python-version: "3.11"
 
       - name: Create virtual environment
-        run: python -m venv venv
-
-      - name: Activate virtual environment
-        run: source venv/bin/activate
+        run: |
+          python -m venv venv
+          source venv/bin/activate
 
       - name: Install build dependencies
         run: |
-          sudo apt-get install \
-            libfuse2 \
-            libgtk-3-dev
+          sudo apt-get install libfuse2
           pip install pyinstaller
 
           # Download AppImage tools
           wget --no-verbose "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage" -O linuxdeploy
           chmod +x linuxdeploy
 
-      - name: Install dependencies using pip
-        run: pip install -r requirements.txt
+      - name: Install Tatlin dependencies
+        run: |
+          sudo apt-get install python3-wxgtk4.0
+          pip install -r requirements-appimage.txt
 
       - name: Build AppImage
         run: |
