--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -202,7 +202,8 @@ jobs:
 
       - name: Build AppImage
         run: |
-          pyinstaller tatlin-appimage.spec
+          # add gdk-pixbuf-2.0 to PATH to avoid errors, see: https://github.com/pyinstaller/pyinstaller/issues/4485
+          env PATH="$PATH:/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0" pyinstaller -y tatlin-appimage.spec
 
           # Create an AppDir structure
           mkdir -p AppDir/usr/bin
