Fix github actions: build-appimage apt-get update

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -188,6 +188,7 @@ jobs:
 
       - name: Install build dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install \
             libfuse2 \
             libsdl2-2.0-0 \
