--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -194,6 +194,8 @@ jobs:
             libsdl2-2.0-0 \
             libgdk-pixbuf2.0-0
 
+          sudo apt-get install shared-mime-info
+          sudo update-mime-database /usr/share/mime
           sudo /lib/x86_64-linux-gnu/gdk-pixbuf-2.0/gdk-pixbuf-query-loaders --update-cache
 
           pip install pyinstaller
