--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -192,13 +192,55 @@ jobs:
           sudo apt-get install \
             libfuse2 \
             libsdl2-2.0-0 \
-            libgdk-pixbuf2.0-dev
+            apport-gtk \
+            gir1.2-gtk-3.0 \
+            gir1.2-gtk-4.0 \
+            gir1.2-gtksource-4 \
+            gir1.2-javascriptcoregtk-4.0 \
+            gstreamer1.0-gtk3 \
+            gtk-update-icon-cache \
+            gtk2-engines-murrine \
+            gtk2-engines-pixbuf \
+            ibus-gtk3 \
+            ibus-gtk4 \
+            ibus-gtk \
+            libavahi-ui-gtk3-0 \
+            libcanberra-gtk3-0 \
+            libcanberra-gtk3-module \
+            libcheese-gtk25 \
+            libclutter-gtk-1.0-0 \
+            libcolord-gtk1 \
+            libdbusmenu-gtk3-4 \
+            libgtk-3-0 \
+            libgtk-3-bin \
+            libgtk-3-common \
+            libgtk-4-1 \
+            libgtk-4-bin \
+            libgtk-4-common \
+            libgtk2.0-0 \
+            libgtk2.0-bin \
+            libgtk2.0-common \
+            libgtk3-perl \
+            libgtkmm-3.0-1v5 \
+            libgtksourceview-4-0 \
+            libgtksourceview-4-common \
+            libjavascriptcoregtk-4.0-18 \
+            libwebkit2gtk-4.0-37 \
+            libwmf-0.2-7-gtk \
+            libwmf0.2-7-gtk \
+            python3-aptdaemon.gtk3widgets \
+            xdg-desktop-portal-gtk \
+            xdg-user-dirs-gtk \
+            yaru-theme-gtk \
+            gir1.2-gdkpixbuf-2.0 \
+            gtk2-engines-pixbuf \
+            libgdk-pixbuf-2.0-0 \
+            libgdk-pixbuf2.0-bin \
+            libgdk-pixbuf2.0-common
 
           sudo apt-get install shared-mime-info
           sudo update-mime-database /usr/share/mime
           sudo /lib/x86_64-linux-gnu/gdk-pixbuf-2.0/gdk-pixbuf-query-loaders --update-cache
-
-          sudo apt-get install xdg-desktop-portal-gtk
 
           pip install pyinstaller==6.1.0
 
