Single executable launches slowly, go back to dir

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -204,7 +204,7 @@ jobs:
       - name: Install Tatlin dependencies
         run: |
           # use prebuilt wxPython wheel to make the installation faster
-          pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 -r requirements.txt
+          pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04 -r requirements.txt
 
       - name: Run PyInstaller
         run: |
@@ -218,7 +218,10 @@ jobs:
           mkdir -p AppDir/usr/share/applications/
           mkdir -p AppDir/usr/share/icons/hicolor/64x64/apps/
 
-          cp dist/tatlin AppDir/usr/bin/
+          mv dist/tatlin/* AppDir/usr/opt/tatlin/
+          cd AppDir/usr/bin
+          ln -s ../opt/tatlin/tatlin tatlin
+          cd ../../..
           cp tatlin.desktop AppDir/usr/share/applications/
           cp tatlin/tatlin.png AppDir/usr/share/icons/hicolor/64x64/apps/
 
