Include libGLU for Fedora

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -195,7 +195,7 @@ jobs:
             xdg-desktop-portal-gtk \
             xdg-user-dirs-gtk \
             freeglut3 \
-            patchelf
+            libglu1-mesa
 
           pip install pyinstaller==6.1.0
 
@@ -222,6 +222,7 @@ jobs:
 
           mv dist/tatlin/* AppDir/usr/opt/tatlin/
           cp /usr/lib/x86_64-linux-gnu/libglut.so.* AppDir/usr/opt/tatlin/_internal
+          cp /usr/lib/x86_64-linux-gnu/libGLU.so.* AppDir/usr/opt/tatlin/_internal
           cd AppDir/usr/bin
           ln -s ../opt/tatlin/tatlin tatlin
           cd ../../..
