--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -228,6 +228,7 @@ jobs:
           cd ../../..
           cp tatlin.desktop AppDir/usr/share/applications/
           cp tatlin/tatlin.png AppDir/usr/share/icons/hicolor/64x64/apps/
+          cat "PYOPENGL_PLATFORM=egl\n" > AppDir/etc/tatlin.conf
 
           ./linuxdeploy --appdir AppDir --output appimage
 
