Improve platform compatibility (#30)

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -194,7 +194,8 @@ jobs:
             libsdl2-2.0-0 \
             xdg-desktop-portal-gtk \
             xdg-user-dirs-gtk \
-            freeglut3
+            freeglut3 \
+            libglu1-mesa
 
           pip install pyinstaller==6.1.0
 
@@ -218,14 +219,17 @@ jobs:
           mkdir -p AppDir/usr/opt/tatlin
           mkdir -p AppDir/usr/share/applications/
           mkdir -p AppDir/usr/share/icons/hicolor/64x64/apps/
+          mkdir -p AppDir/etc
 
           mv dist/tatlin/* AppDir/usr/opt/tatlin/
+          cp /usr/lib/x86_64-linux-gnu/libglut.so.* AppDir/usr/opt/tatlin/_internal
+          cp /usr/lib/x86_64-linux-gnu/libGLU.so.* AppDir/usr/opt/tatlin/_internal
           cd AppDir/usr/bin
           ln -s ../opt/tatlin/tatlin tatlin
           cd ../../..
           cp tatlin.desktop AppDir/usr/share/applications/
           cp tatlin/tatlin.png AppDir/usr/share/icons/hicolor/64x64/apps/
-          cp /usr/lib/x86_64-linux-gnu/libglut.so.* AppDir/usr/lib/x86_64-linux-gnu/
+          echo "PYOPENGL_PLATFORM=egl" > AppDir/etc/tatlin.conf
 
           ./linuxdeploy --appdir AppDir --output appimage
 
