Run tests on every branch

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,6 +3,8 @@ name: Run tests
 # should run on every push to any branch except for tags
 on:
   push:
+    branches:
+      - "*"
     tags-ignore:
       - "*"
 
