--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
@@ -21,8 +21,10 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies using pip
-        run: pip install -r requirements.txt
+      - name: Install Tatlin dependencies
+        run: |
+          # use prebuilt wxPython wheel to make the installation faster
+          pip install -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04 -r requirements.txt
 
       - name: Run tests
         run: python -m unittest discover -s tests
