--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -81,9 +81,14 @@ jobs:
           name: html_report
           path: htmlcov
 
+      - name: Debug
+        run: |
+          ls -l htmlcov
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./htmlcov
+          destination_dir: tatlin
           external_repository: dkobozev/coverage-reports
           deploy_key: ${{ secrets.COVERAGE_DEPLOY_KEY }}
